deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: road-frontend
  namespace: road-safety
  labels:
    app: road-frontend
spec:
  replicas: 2  
  selector:
    matchLabels:
      app: road-frontend
  template:
    metadata:
      labels:
        app: road-frontend
    spec:
      containers:
      - name: road-frontend
        image: cloudsihmar/road-frontend:v1.0.0
        ports:
        - containerPort: 80
---
