service.yaml
apiVersion: v1
kind: Service
metadata:
  name: road-frontend
spec:
  selector:
    app: road-frontend
  ports:
    - protocol: TCP
      port: 80           
      targetPort: 80
